--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
       cpu: 500
       memory: 100MiB
   settings:
-    repo: rsync-ssh
+    repo: ikaruswill/rsync-ssh
     auto_tag: true
     auto_tag_suffix: linux-arm
     username:
@@ -34,7 +34,7 @@ steps:
 
 tolerations:
 - key: arch
-  operator: Equals
+  operator: Equal
   value: arm
   effect: NoSchedule
 
@@ -71,7 +71,7 @@ steps:
       cpu: 500
       memory: 100MiB
   settings:
-    repo: rsync-ssh
+    repo: ikaruswill/rsync-ssh
     auto_tag: true
     auto_tag_suffix: linux-arm64
     username:
@@ -112,7 +112,7 @@ steps:
       cpu: 500
       memory: 100MiB
   settings:
-    repo: rsync-ssh
+    repo: ikaruswill/rsync-ssh
     auto_tag: true
     auto_tag_suffix: linux-amd64
     username:
