--- a/.drone.yml
+++ b/.drone.yml
@@ -85,7 +85,7 @@ clone:
 steps:
 - name: manifest
   pull: always
-  image: plugins/manifest
+  image: plugins/manifest:1.4
   settings:
     auto_tag: true
     ignore_missing: true
